@@ -1,42 +1,34 @@
 package com.github.jnhyperion.hyperrobotframeworkplugin.ide.inspections.compilation;
 
 import com.github.jnhyperion.hyperrobotframeworkplugin.RobotBundle;
-import com.github.jnhyperion.hyperrobotframeworkplugin.ide.inspections.SimpleRobotInspection;
-import com.github.jnhyperion.hyperrobotframeworkplugin.psi.element.PositionalArgument;
 import com.github.jnhyperion.hyperrobotframeworkplugin.psi.element.KeywordStatement;
+import com.github.jnhyperion.hyperrobotframeworkplugin.psi.element.PositionalArgument;
 import com.github.jnhyperion.hyperrobotframeworkplugin.psi.element.Variable;
+import com.intellij.lang.annotation.AnnotationHolder;
+import com.intellij.lang.annotation.Annotator;
+import com.intellij.lang.annotation.HighlightSeverity;
+import com.intellij.openapi.project.DumbAware;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiReference;
 import com.intellij.psi.util.PsiTreeUtil;
-import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class RobotVariableNotFound extends SimpleRobotInspection {
+public class RobotVariableAnnotator implements Annotator, DumbAware {
 
     private static final Pattern VARIABLE_PATTERN = Pattern.compile("^\\$\\{(.*)}$");
 
-    @Nls
-    @NotNull
-    public String getDisplayName() {
-        return RobotBundle.getMessage("INSP.NAME.variable.undefined");
-    }
-
     @Override
-    public final boolean skip(PsiElement element) {
-        if (!(element instanceof Variable variable) || variable.isEmpty()) {
-            return true;
+    public void annotate(@NotNull PsiElement element, @NotNull AnnotationHolder holder) {
+        if (!(element instanceof Variable variable) || variable.isEmpty() || variable.isNested()) {
+            return;
         }
         PsiReference reference = element.getReference();
         if (reference != null && reference.resolve() != null) {
-            return true;
-        }
-
-        if (variable.isNested()) {
-            return true;
+            return;
         }
 
         String elementText = element.getText();
@@ -44,7 +36,7 @@ public class RobotVariableNotFound extends SimpleRobotInspection {
         if (matcher.matches()) {
             try {
                 Double.parseDouble(matcher.group(1));
-                return true;
+                return;
             } catch (NumberFormatException ignored) {
             }
         }
@@ -52,20 +44,10 @@ public class RobotVariableNotFound extends SimpleRobotInspection {
         KeywordStatement keywordStatement = PsiTreeUtil.getParentOfType(element, KeywordStatement.class);
         if (keywordStatement != null) {
             List<PositionalArgument> positionalArguments = keywordStatement.getPositionalArguments();
-            return keywordStatement.getGlobalVariable() != null && positionalArguments.size() > 1 && element == positionalArguments.get(0);
+            if (keywordStatement.getGlobalVariable() != null && positionalArguments.size() > 1 && element == positionalArguments.getFirst()) {
+                return;
+            }
         }
-
-        return false;
-    }
-
-    @Override
-    public final String getMessage() {
-        return RobotBundle.getMessage("INSP.variable.undefined");
-    }
-
-    @NotNull
-    @Override
-    protected final String getGroupNameKey() {
-        return "INSP.GROUP.compilation";
+        holder.newAnnotation(HighlightSeverity.ERROR, RobotBundle.getMessage("annotation.variable.not-found")).range(element).create();
     }
 }
